--- a/src/app/pages/login/login.page.html
+++ b/src/app/pages/login/login.page.html
@@ -10,16 +10,8 @@
       <ion-row >
         <ion-col size-sm="6" offset-sm="3">
           <ion-item>
-            <ion-label position="floating">Email</ion-label>
-            <ion-input
-                    type="email"
-                    formControlName="email"
-            ></ion-input>
-          </ion-item>
-          <ion-item *ngIf="!form.get('email').valid && form.get('email').touched" lines="none">
-            <ion-label>
-              Please enter a valid Email
-            </ion-label>
+            <ion-label position="floating">Username</ion-label>
+            <ion-input formControlName="username"></ion-input>
           </ion-item>
         </ion-col>
       </ion-row>
