adding the menu and edit profile page

--- a/src/app/pages/login/login.page.html
+++ b/src/app/pages/login/login.page.html
@@ -46,10 +46,10 @@
                   color="primary"
                   (click)="onLogin()"
                   expand="block"
+                  [disabled]="!form.valid"
           >
             Login
           </ion-button>
-
         </ion-col>
       </ion-row>
     </ion-grid>
