--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -74,4 +74,20 @@
   --ion-color-light-contrast-rgb: 0, 0, 0;
   --ion-color-light-shade: #d7d8da;
   --ion-color-light-tint: #f5f6f9;
+
+  //toolbar colors
+  --ion-toolbar-background: var(--ion-color-primary, white);
+  --ion-toolbar-color: var(--ion-color-primary-contrast, white);
+
+  //appVariables
+  --app-color: black;
+  --app-icons-color: #4b5059;
+
+  //app background
+  --ion-background-color: #f4f5f8;
+  --ion-background-color-rgb: 244, 244, 244;
+
+  //app text color
+  --ion-text-color: #39393a;
+  --ion-text-color-rgb: 57, 57, 58;
 }
