--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,10 +3,35 @@
     <ion-content>
 
       <ion-grid style="height: 100vh;  display: flex; flex-flow: column ">
+        <ion-row style="flex-shrink: 0; height: 25%">
+          <ion-menu-toggle style="height: 100%; width: 100%">
+            <app-user-menu-info style="height: 100%; width: 100%"></app-user-menu-info>
+          </ion-menu-toggle>
+        </ion-row>
+        <ion-row align-items-center style="flex-shrink: 0;">
+          <ion-list>
+            <ion-menu-toggle>
+              <ion-item lines="none" (click)="onLogout()" button>
+                <ion-icon style="color: var(--app-icons-color)" name="log-out" slot="start"></ion-icon>
+                <ion-label>Logout</ion-label>
+              </ion-item>
+            </ion-menu-toggle>
+          </ion-list>
+        </ion-row>
 
+        <ion-row style=" align-items: flex-end; flex-grow: 1; flex-shrink: 0;"  >
+
+          <ion-col size="12" no-padding>
+            <ion-menu-toggle>
+              <ion-item lines="none" (click)="switchMode()" style="border-top-color: slategray; border-top-style: solid; border-top-width: thin;">
+                <ion-icon style="color: var(--app-icons-color)" [name]=" darkMode ? 'sunny' : 'moon'" slot="start" ></ion-icon>
+              </ion-item>
+            </ion-menu-toggle>
+          </ion-col >
+        </ion-row>
       </ion-grid>
 
     </ion-content>
   </ion-menu>
-  <ion-router-outlet></ion-router-outlet>
+  <ion-router-outlet main ></ion-router-outlet>
 </ion-app>
