--- a/src/app/pages/chat/chat.page.html
+++ b/src/app/pages/chat/chat.page.html
@@ -12,7 +12,7 @@
     <!--<app-preview-chat *ngFor="let chat of chats" [chat]="chat" ></app-preview-chat>-->
   <!--</div>-->
   <ion-fab vertical="bottom" horizontal="end" slot="fixed">
-    <ion-fab-button routerDirection="forward" [routerLink]= "['new-chat']">
+    <ion-fab-button routerDirection="forward" [routerLink]= "['/new-chat']">
       <ion-icon style="color: #ffffff " name="text"></ion-icon>
     </ion-fab-button>
   </ion-fab>
