--- a/src/app/pages/chat/new-chat/new-chat.page.html
+++ b/src/app/pages/chat/new-chat/new-chat.page.html
@@ -1,7 +1,7 @@
 <ion-header>
   <ion-toolbar>
     <ion-buttons slot="start" style="padding-right: 0; margin-right: 0">
-      <ion-back-button style="padding-right: 0; margin-right: 0" [defaultHref]="['/home/tabs/chat']"></ion-back-button>
+      <ion-back-button style="padding-right: 0; margin-right: 0" [defaultHref]="['/home']"></ion-back-button>
     </ion-buttons>
     <ion-title style="padding-left: 0">
       <ion-grid no-padding>
