--- a/src/app/pages/chat/new-chat/new-chat.page.scss
+++ b/src/app/pages/chat/new-chat/new-chat.page.scss
@@ -1,9 +1,9 @@
 ion-searchbar{
   border-radius: 10px;
   --background : var(--ion-background-color);
-  --color: #ec0662;
-  --placeholder-color: #ec0662;
-  --placeholder-opacity: 1;
+  --color: var(--ion-color-primary);
+  --placeholder-color: var(--ion-color-primary);
+  --placeholder-opacity: 0.8;
 }
 
 #noResults{
