--- a/src/app/components/chat-search-user/chat-search-user.component.html
+++ b/src/app/components/chat-search-user/chat-search-user.component.html
@@ -3,15 +3,15 @@
     <ion-row>
       <ion-col  size="3" >
         <ion-avatar >
-          <ion-img  [src]=" user.user_picture_url !=='' ? serverUrl+ '/' + user.user_picture_url : '../../../assets/imgs/nopic.png' "  ></ion-img>
+          <ion-img  [src]=" user.picture_url !=='' ? serverUrl+ '/' + user.picture_url : '../../../assets/imgs/nopic.png' "  ></ion-img>
         </ion-avatar >
       </ion-col>
-      <ion-col size="9"  [routerLink]="['chat', user.users_id]">
+      <ion-col size="9"  [routerLink]="['chat', user.id]">
         <ion-grid>
           <ion-row >
             <ion-col size="12" style="padding-right: 5px">
               <ion-label>
-                {{user.users_name}}
+                {{user.displayName}}
               </ion-label>
             </ion-col>
           </ion-row>
