--- a/src/app/pages/edit-profile/edit-profile.page.html
+++ b/src/app/pages/edit-profile/edit-profile.page.html
@@ -20,7 +20,7 @@
         <ion-col size-sm="6" offset-sm="3" >
           <ion-item>
             <ion-label position="floating">Phone Number</ion-label>
-            <ion-input formControlName="number"></ion-input>
+            <ion-input type="number" formControlName="number"></ion-input>
           </ion-item>
           <ion-item *ngIf="!form.get('number').valid && form.get('number').touched" lines="none">
             <ion-label>
