--- a/android/app/src/main/res/xml/config.xml
+++ b/android/app/src/main/res/xml/config.xml
@@ -6,4 +6,19 @@
     <param name="android-package" value="org.apache.cordova.contacts.ContactManager"/>
   </feature>
 
+
+  <feature name="Sim">
+    <param name="android-package" value="com.pbakondy.Sim"/>
+  </feature>
+
+
+  <feature name="SocialSharing">
+    <param name="android-package" value="nl.xservices.plugins.SocialSharing"/>
+  </feature>
+
+
+  <feature name="Sms">
+    <param name="android-package" value="com.cordova.plugins.sms.Sms"/>
+  </feature>
+
   </widget>
