--- a/src/app/components/user-menu-info/user-menu-info.component.html
+++ b/src/app/components/user-menu-info/user-menu-info.component.html
@@ -11,13 +11,13 @@
       </ion-button>
     </ion-col>
   </ion-row >
-  <ion-row style="height: 25%"  no-padding>
-    <ion-col offset="1" style="padding-top: 1.5vh; padding-bottom:0 ">
+  <ion-row  no-padding>
+    <ion-col offset="1" >
       <ion-label> {{user.name}} </ion-label>
     </ion-col>
   </ion-row>
-  <ion-row style="height: 25%; border-bottom-color: slategray; border-bottom-style: solid; border-bottom-width: thin; padding-top: 0; padding-bottom: 0">
-    <ion-col offset="1" no-padding>
+  <ion-row style=" border-bottom-color: slategray; border-bottom-style: solid; border-bottom-width: thin; padding-top: 0; padding-bottom: 0">
+    <ion-col offset="1" >
       <ion-label> {{user.phone}}</ion-label>
     </ion-col>
   </ion-row>
