--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,13 +3,25 @@
     <ion-content>
 
       <ion-grid style="height: 100vh;  display: flex; flex-flow: column ">
-        <ion-row style="flex-shrink: 0; height: 25%">
-          <ion-menu-toggle style="height: 100%; width: 100%">
-            <app-user-menu-info style="height: 100%; width: 100%"></app-user-menu-info>
+        <ion-row>
+          <ion-menu-toggle style="width: 100%;">
+            <app-user-menu-info></app-user-menu-info>
           </ion-menu-toggle>
         </ion-row>
         <ion-row align-items-center style="flex-shrink: 0;">
           <ion-list>
+            <ion-menu-toggle>
+              <ion-item lines="none" button>
+                <ion-icon style="color: var(--app-icons-color)" name="contacts" slot="start"></ion-icon>
+                <ion-label>New Group</ion-label>
+              </ion-item>
+            </ion-menu-toggle>
+            <ion-menu-toggle>
+              <ion-item lines="none" button>
+                <ion-icon style="color: var(--app-icons-color)" name="megaphone" slot="start"></ion-icon>
+                <ion-label>New Channel</ion-label>
+              </ion-item>
+            </ion-menu-toggle>
             <ion-menu-toggle>
               <ion-item lines="none" (click)="onLogout()" button>
                 <ion-icon style="color: var(--app-icons-color)" name="log-out" slot="start"></ion-icon>
