--- a/src/app/components/preview-chat/preview-chat.component.html
+++ b/src/app/components/preview-chat/preview-chat.component.html
@@ -2,25 +2,25 @@
   <ion-grid >
     <ion-row>
       <ion-col  size="3" >
-        <ion-avatar [routerLink]="['/home/userProfile', chat.user1._id]">
-          <ion-img  [src]=" chat.user1.profileImage !=='' ? serverUrl+ '/' + chat.user1.profileImage : '../../../assets/imgs/nopic.png' "  ></ion-img>
+        <ion-avatar >
+          <ion-img  [src]=" chat.conversation_picture_url ? serverUrl+ '/' + chat.conversation_picture_url : '../../../assets/imgs/nopic.png' "  ></ion-img>
         </ion-avatar >
       </ion-col>
-      <ion-col size="9"  [routerLink]="['/home/tabs/chat', chat.user1._id]">
+      <ion-col size="9"  [routerLink]="['/chat', chat.conversations_id]">
         <ion-grid>
           <ion-row >
             <ion-col size="12" style="padding-right: 5px">
               <ion-label *ngIf="lastMsgDate">
-                {{chat.user1.name }}   @{{chat.user1.username }}   {{ lastMsgDate | date: 'shortDate'}}
+                {{chat.conversation_name }}  {{ lastMsgDate | date: 'shortDate'}}
               </ion-label>
             </ion-col>
           </ion-row>
           <ion-row >
             <ion-col size="12" style="padding-right: 5px">
-              <ion-label *ngIf="lastMsg">
+              <ion-label *ngIf="chat.last_message">
                 <ion-item lines="none">
                   <ion-text>
-                    {{lastMsg.message}}
+                    {{chat.last_message}}
                   </ion-text>
                 </ion-item>
               </ion-label>
