--- a/src/app/pages/chat/chat.page.html
+++ b/src/app/pages/chat/chat.page.html
@@ -3,14 +3,14 @@
     <ion-buttons slot="start">
       <ion-menu-button></ion-menu-button>
     </ion-buttons>
-    <ion-title>chat</ion-title>
+    <ion-title>NitroChat <ion-icon size="medium" name="flame"></ion-icon></ion-title>
   </ion-toolbar>
 </ion-header>
 
 <ion-content >
-  <!--<div *ngIf="chats && chats.length > 0">-->
-    <!--<app-preview-chat *ngFor="let chat of chats" [chat]="chat" ></app-preview-chat>-->
-  <!--</div>-->
+  <div *ngIf="chats?.length >0">
+    <app-preview-chat *ngFor="let chat of chats" [chat]="chat" ></app-preview-chat>
+  </div>
   <ion-fab vertical="bottom" horizontal="end" slot="fixed">
     <ion-fab-button routerDirection="forward" [routerLink]= "['/new-chat']">
       <ion-icon style="color: #ffffff " name="text"></ion-icon>
