--- a/src/app/components/chat-message/chat-message.component.html
+++ b/src/app/components/chat-message/chat-message.component.html
@@ -2,15 +2,15 @@
   <ion-row>
     <ion-col>
       <ion-text [color]="color">
-        {{message.users_name}}
+        {{message?.users_name}}
       </ion-text>
     </ion-col>
   </ion-row>
   <ion-row>
     <ion-col size="9">
-      <div [className]="message.isMine ?  'primary' : 'medium' " >
+      <div [className]="message?.isMine ?  'primary' : 'medium' " >
         <ion-text>
-          {{message.message_body}}
+          {{message?.message_body}}
         </ion-text>
       </div>
     </ion-col>
