--- a/src/app/pages/chat/single-chat/single-chat.page.html
+++ b/src/app/pages/chat/single-chat/single-chat.page.html
@@ -7,11 +7,11 @@
       <ion-row>
         <ion-col size="3">
           <ion-avatar>
-            <ion-img [src]=" chat.chat.conversation_picture_url ? serverUrl+ '/' + chat.chat.conversation_picture_url : '../../../assets/imgs/nopic.png' " ></ion-img>
+            <ion-img [src]=" chat?.chat?.conversation_picture_url ? serverUrl+ '/' + chat?.chat?.conversation_picture_url : '../../../assets/imgs/nopic.png' " ></ion-img>
           </ion-avatar>
         </ion-col>
         <ion-col size="9">
-          <ion-title *ngIf="chat.chat.conversation_name">{{chat.chat.conversation_name}}</ion-title>
+          <ion-title *ngIf="chat?.chat?.conversation_name!==null">{{chat.chat.conversation_name}}</ion-title>
         </ion-col>
       </ion-row>
     </ion-grid>
@@ -20,8 +20,8 @@
 
 <ion-content>
 
-  <ion-list *ngIf="chat">
-    <app-chat-message *ngFor="let item of chat.messages"  [message]="item"  ></app-chat-message>
+  <ion-list *ngIf="messages?.length>0">
+    <app-chat-message *ngFor="let item of messages"  [message]="item"  ></app-chat-message>
   </ion-list>
 
 
