--- a/src/app/components/chat-search-user/chat-search-user.component.html
+++ b/src/app/components/chat-search-user/chat-search-user.component.html
@@ -1,4 +1,4 @@
-<ion-item>
+<ion-item (click)=goToChat()>
   <ion-grid >
     <ion-row>
       <ion-col  size="3" >
@@ -6,7 +6,7 @@
           <ion-img  [src]=" user.picture_url !=='' ? serverUrl+ '/' + user.picture_url : '../../../assets/imgs/nopic.png' "  ></ion-img>
         </ion-avatar >
       </ion-col>
-      <ion-col size="9"  [routerLink]="['chat', user.id]">
+      <ion-col size="9">
         <ion-grid>
           <ion-row >
             <ion-col size="12" style="padding-right: 5px">
