--- a/src/app/pages/chat/single-chat/single-chat.page.html
+++ b/src/app/pages/chat/single-chat/single-chat.page.html
@@ -4,14 +4,14 @@
       <ion-back-button [defaultHref]="['/home']"></ion-back-button>
     </ion-buttons>
     <ion-grid>
-      <ion-row>
-        <ion-col size="3">
-          <ion-avatar>
-            <ion-img [src]=" chat?.chat?.conversation_picture_url ? serverUrl+ '/' + chat?.chat?.conversation_picture_url : '../../../assets/imgs/nopic.png' " ></ion-img>
+      <ion-row >
+        <ion-col size="3" >
+          <ion-avatar >
+            <ion-img  [src]=" chat?.chat?.conversation_picture_url ? serverUrl+ '/' + chat?.chat?.conversation_picture_url : '../../../assets/imgs/nopic.png' " ></ion-img>
           </ion-avatar>
         </ion-col>
-        <ion-col size="9">
-          <ion-title *ngIf="chat?.chat?.conversation_name!==null">{{chat.chat.conversation_name}}</ion-title>
+        <ion-col size="9" style="align-self: center">
+          <ion-title  *ngIf="chat?.chat?.conversation_name">{{chat.chat.conversation_name}}</ion-title>
         </ion-col>
       </ion-row>
     </ion-grid>
@@ -37,11 +37,16 @@
   <ion-toolbar no-padding>
     <ion-grid no-padding>
       <ion-row no-padding>
-        <ion-col offset="1" size="9" no-padding>
+        <ion-col offset="1" size="7" no-padding>
           <ion-input [(ngModel)]="messageValue" placeholder="Start a message"></ion-input>
         </ion-col>
         <ion-col size="2" no-padding>
-          <ion-button (click)="sendMsg()"  id="sendBtn" [disabled]="messageValue?.trim() === '' || !messageValue">
+          <ion-button (click)="addPicture()"  class="Btn" >
+            <ion-icon name="image" slot="icon-only"></ion-icon>
+          </ion-button>
+        </ion-col>
+        <ion-col size="2" no-padding>
+          <ion-button (click)="sendMsg()"  class="Btn" [disabled]="messageValue?.trim() === '' || !messageValue">
             <ion-icon name="send" slot="icon-only"></ion-icon>
           </ion-button>
         </ion-col>
