--- a/src/app/pages/chat/single-chat/single-chat.page.scss
+++ b/src/app/pages/chat/single-chat/single-chat.page.scss
@@ -2,7 +2,7 @@
 
 
 
-  #sendBtn{
+  .Btn{
     --box-shadow: none;
 
   }
@@ -10,7 +10,7 @@
   ion-input{
     border-radius: 10px;
     --background : var(--ion-background-color);
-    --color: #ec0662;
-    --placeholder-color: #ec0662;
+    --color: var(--ion-color-primary);
+    --placeholder-color: var(--ion-color-primary);
     --placeholder-opacity: 1;
   }
