--- a/src/app/components/chat-message/chat-message.component.html
+++ b/src/app/components/chat-message/chat-message.component.html
@@ -1,4 +1,4 @@
-<ion-grid>
+<ion-grid (click)="deleteMessage(message?.conversations_id,message?.message_id)">
   <ion-row>
     <ion-col>
       <ion-text [color]="color">
