added hammerjs (working) also made few fixes regarding time and chat names

--- a/src/app/components/chat-message/chat-message.component.html
+++ b/src/app/components/chat-message/chat-message.component.html
@@ -1,7 +1,7 @@
 <ion-grid (click)="deleteMessage(message?.conversations_id,message?.message_id)">
   <ion-row>
     <ion-col>
-      <ion-text [color]="color">
+      <ion-text [color]="message?.isMine ? color : secondColor">
         {{message?.users_name}}
       </ion-text>
     </ion-col>
