--- a/src/app/pages/chat/single-chat/single-chat.page.html
+++ b/src/app/pages/chat/single-chat/single-chat.page.html
@@ -21,7 +21,7 @@
 <ion-content>
 
   <ion-list *ngIf="messages?.length>0">
-    <app-chat-message *ngFor="let item of messages"  [message]="item"  [color]="color" [secondColor]='otherColor'></app-chat-message>
+    <app-chat-message *ngFor="let item of messages"  (value)="scrollDown()" [message]="item"  [color]="color" [secondColor]='otherColor'></app-chat-message>
   </ion-list>
 
 
@@ -38,7 +38,7 @@
     <ion-grid no-padding>
       <ion-row no-padding>
         <ion-col offset="1" size="7" no-padding>
-          <ion-input [(ngModel)]="messageValue" placeholder="Start a message"></ion-input>
+          <ion-input [(ngModel)]="messageValue" placeholder="Start a message" (ionFocus)="scrollDown()"></ion-input>
         </ion-col>
         <ion-col size="2" no-padding>
           <ion-button (click)="addPicture()"  class="Btn" >
