--- a/src/app/pages/chat/single-chat/single-chat.page.html
+++ b/src/app/pages/chat/single-chat/single-chat.page.html
@@ -21,8 +21,7 @@
 <ion-content>
 
   <ion-list *ngIf="messages?.length>0">
-    <app-chat-message *ngFor="let item of messages"  (value)="scrollDown()" [message]="item"  [color]="color" [secondColor]='otherColor'></app-chat-message>
-    <app-chat-message *ngFor="let item of messages" (updateEmitter)="startUpdate($event)" [message]="item"  [color]="color" [secondColor]='otherColor'></app-chat-message>
+    <app-chat-message *ngFor="let item of messages" (value)="scrollDown()" (updateEmitter)="startUpdate($event)" [message]="item"  [color]="color" [secondColor]='otherColor'></app-chat-message>
   </ion-list>
 
 
