--- a/src/app/components/preview-chat/preview-chat.component.html
+++ b/src/app/components/preview-chat/preview-chat.component.html
@@ -1,4 +1,4 @@
-  <ion-item *ngIf="chat">
+  <ion-item *ngIf="chat" (press)="onPressed()">
   <ion-grid >
     <ion-row>
       <ion-col  size="3" >
