--- a/src/app/components/popover/popover.component.html
+++ b/src/app/components/popover/popover.component.html
@@ -1,5 +1,5 @@
 <ion-list>
-  <ion-list-header>Nitro</ion-list-header>
+  <ion-list-header>Options</ion-list-header>
   <ion-item button detail="true" *ngIf="!isPreview">
     Forward
   </ion-item>
