--- a/src/app/components/preview-chat/preview-chat.component.html
+++ b/src/app/components/preview-chat/preview-chat.component.html
@@ -1,8 +1,8 @@
-  <ion-item *ngIf="chat" (press)="onPressed()">
-  <ion-grid >
+  <ion-item *ngIf="chat" (press)="onPressed()" >
+  <ion-grid [ngClass]="{'selected': selected }">
     <ion-row>
       <ion-col size="3">
-        <ion-avatar (click)="deleteChat(myUser.id, chat.conversations_id)">
+        <ion-avatar>
           <ion-img  [src]=" chat.conversation_picture_url ? serverUrl+ '/' + chat.conversation_picture_url : '../../../assets/imgs/nopic.png' "  ></ion-img>
         </ion-avatar >
       </ion-col>
@@ -18,11 +18,9 @@
           <ion-row >
             <ion-col size="12" style="padding-right: 5px">
               <ion-label *ngIf="chat.last_message">
-                <ion-item lines="none">
-                  <ion-text>
+                  <ion-text >
                     {{chat.last_message?.message_body}}
                   </ion-text>
-                </ion-item>
               </ion-label>
             </ion-col>
           </ion-row>
@@ -30,4 +28,4 @@
       </ion-col>
     </ion-row>
   </ion-grid>
-</ion-item-sliding>
+</ion-item>
