--- a/src/app/pages/chat/single-chat/single-chat.page.scss
+++ b/src/app/pages/chat/single-chat/single-chat.page.scss
@@ -1,4 +1,16 @@
+.item ion-avatar {
+  min-width: 3rem;
+  min-height: 3rem;
+  width: 25%;
+  height: 25%;
+  img {
+    max-width: 3rem;
+    min-width: 3rem;
+    width: 25%;
+    height: 25%;
 
+  }
+}
 
 
 
