--- a/src/app/components/chat-message/chat-message.component.scss
+++ b/src/app/components/chat-message/chat-message.component.scss
@@ -1,11 +1,18 @@
 .user{
-  background-color: rgba(232, 222, 222, 0.5);
+  background-color: #dcf8c6;
+  border-top-left-radius: 15px;
+  border-top-right-radius: 15px;
+  border-bottom-left-radius:15px;
 }
-
-.selected{
-  background-color: rgba(7, 142, 173, 0.8);
-}
-
 .noUser{
-  background-color: rgba(124, 124, 124, 0.7);
+  background-color: #e5e5e5;
+  border-top-left-radius: 15px;
+  border-top-right-radius: 15px;
+  border-bottom-right-radius: 15px;
 }
+.selected{
+  background-color: rgba(7, 142, 173, 0.2);
+}
+
+
+
