--- a/src/app/pages/chat/single-chat/single-chat.page.html
+++ b/src/app/pages/chat/single-chat/single-chat.page.html
@@ -3,15 +3,15 @@
     <ion-buttons slot="start">
       <ion-back-button [defaultHref]="['/home']"></ion-back-button>
     </ion-buttons>
-    <ion-grid>
-      <ion-row >
-        <ion-col size="3" >
-          <ion-avatar >
-            <ion-img  [src]=" chat?.chat?.conversation_picture_url ? serverUrl+ '/' + chat?.chat?.conversation_picture_url : '../../../assets/imgs/nopic.png' " ></ion-img>
+    <ion-grid no-padding>
+      <ion-row no-padding>
+        <ion-col size="3" class="item" no-padding>
+          <ion-avatar  >
+            <ion-img [src]=" chat?.chat?.conversation_picture_url ? serverUrl+ '/' + chat?.chat?.conversation_picture_url : '../../../assets/imgs/nopic.png' " ></ion-img>
           </ion-avatar>
         </ion-col>
-        <ion-col size="9" style="align-self: center">
-          <ion-title  *ngIf="chat?.chat?.conversation_name">{{chat.chat.conversation_name}}</ion-title>
+        <ion-col size="9" style="align-self: center" no-padding>
+          <ion-title no-padding *ngIf="chat?.chat?.conversation_name">{{chat.chat.conversation_name}}</ion-title>
         </ion-col>
       </ion-row>
     </ion-grid>
@@ -21,7 +21,7 @@
 <ion-content>
 
   <ion-list *ngIf="messages?.length>0">
-    <app-chat-message *ngFor="let item of messages" (value)="scrollDown()" (updateEmitter)="startUpdate($event)" [message]="item"  [color]="color" [secondColor]='otherColor'></app-chat-message>
+    <app-chat-message [chat]="chat" *ngFor="let item of messages" (value)="scrollDown()" (updateEmitter)="startUpdate($event)" [message]="item"  [color]="color" [secondColor]='otherColor'></app-chat-message>
   </ion-list>
 
 
