added static data for forward msg

--- a/src/app/components/popover/popover.component.html
+++ b/src/app/components/popover/popover.component.html
@@ -1,6 +1,6 @@
 <ion-list>
   <ion-list-header>Options</ion-list-header>
-  <ion-item button detail="true" *ngIf="!isPreview">
+  <ion-item button detail="true" *ngIf="!isPreview" (click)="onForward()">
     Forward
   </ion-item>
   <ion-item  *ngIf="isMine && !isPreview" button detail="true" (click)="onUpdate()">
