adding newChat, and newGroup logic

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -11,13 +11,13 @@
         <ion-row align-items-center style="flex-shrink: 0;">
           <ion-list>
             <ion-menu-toggle>
-              <ion-item lines="none" button>
+              <ion-item lines="none" button routerLink="/pre-creation-group/2">
                 <ion-icon style="color: var(--app-icons-color)" name="contacts" slot="start"></ion-icon>
                 <ion-label>New Group</ion-label>
               </ion-item>
             </ion-menu-toggle>
             <ion-menu-toggle>
-              <ion-item lines="none" button>
+              <ion-item lines="none" button routerLink="/pre-creation-group/3">
                 <ion-icon style="color: var(--app-icons-color)" name="megaphone" slot="start"></ion-icon>
                 <ion-label>New Channel</ion-label>
               </ion-item>
