added validations to some components (untested)

--- a/src/app/components/popover/popover.component.html
+++ b/src/app/components/popover/popover.component.html
@@ -6,7 +6,7 @@
   <ion-item  *ngIf="isMine && !isPreview" button detail="true" (click)="onUpdate()">
     Update
   </ion-item>
-  <ion-item *ngIf="isMine" button detail="true" (click)="onDelete()">
+  <ion-item *ngIf="isMine && canBeDeleted" button detail="true" (click)="onDelete()">
     Delete
   </ion-item>
 </ion-list>
