--- a/src/app/pages/chat/single-chat/single-chat.page.html
+++ b/src/app/pages/chat/single-chat/single-chat.page.html
@@ -62,7 +62,7 @@
         </ion-col>
       </ion-row>
     </ion-grid>
-    <ion-item lines="none" style="background-color: rgba(255, 255, 255, 0.1); text-align: center">
+    <ion-item lines="none" style="background-color: rgba(255, 255, 255, 0.1); text-align: center" *ngIf="isDisabled">
 
          <ion-label>only Admins can send messages</ion-label>
 
