fixing group search component

--- a/src/app/pages/chat/single-chat/single-chat.page.html
+++ b/src/app/pages/chat/single-chat/single-chat.page.html
@@ -1,7 +1,9 @@
 <ion-header>
   <ion-toolbar>
-    <ion-buttons slot="start">
-      <ion-back-button [defaultHref]="['/home']"></ion-back-button>
+    <ion-buttons routerLink="/home" slot="start">
+      <ion-button >
+        <ion-icon slot="icon-only" name="arrow-back"></ion-icon>
+      </ion-button>
     </ion-buttons>
     <ion-grid no-padding>
       <ion-row no-padding>
