--- a/src/app/components/group-search-user/group-search-user.component.html
+++ b/src/app/components/group-search-user/group-search-user.component.html
@@ -6,20 +6,15 @@
           <ion-img  [src]=" user.picture_url !=='' ? serverUrl+ '/' + user.picture_url : '../../../assets/imgs/nopic.png' "  ></ion-img>
         </ion-avatar >
       </ion-col>
-      <ion-col size="9">
-        <ion-grid>
-          <ion-row >
-            <ion-col size="10" style="padding-right: 5px">
+      <ion-col size="7" style="padding-right: 5px">
               <ion-label>
                 {{user.displayName}}
               </ion-label>
-            </ion-col>
-            <ion-col size="2" *ngIf="selected">
-              <ion-icon color="primary"  name="checkmark-circle">
-              </ion-icon>
-            </ion-col>
-          </ion-row>
-        </ion-grid>
+      </ion-col>
+      <ion-col size="2" *ngIf="selected">
+
+        <ion-icon color="primary" size="large" style="height: 100%; width: 100%" name="checkmark-circle"></ion-icon>
+
       </ion-col>
     </ion-row>
   </ion-grid>
