--- a/src/app/components/preview-chat/preview-chat.component.html
+++ b/src/app/components/preview-chat/preview-chat.component.html
@@ -1,31 +1,38 @@
-  <ion-item *ngIf="chat" (press)="onPressed()" >
-  <ion-grid [ngClass]="{'selected': selected }">
-    <ion-row>
-      <ion-col size="3">
+
+  <ion-grid  *ngIf="chat" (press)="onPressed()">
+    <ion-row [ngClass]="{'selected': selected }">
+      <ion-col size="2" class="picture" style="display: flex; justify-self: center;align-self: center">
         <ion-avatar>
           <ion-img  [src]=" chat.conversation_picture_url ? serverUrl+ '/' + chat.conversation_picture_url : '../../../assets/imgs/nopic.png' "  ></ion-img>
         </ion-avatar >
       </ion-col>
-      <ion-col size="9"  [routerLink]="['/chat', chat.conversations_id]">
-        <ion-grid>
+      <ion-col size="10"  [routerLink]="['/chat', chat.conversations_id]">
+        <ion-item>
+        <ion-grid no-padding>
           <ion-row >
-            <ion-col size="12" style="padding-right: 5px">
-              <ion-label *ngIf="lastMsgDate">
-                {{chat.conversation_name }}  {{ lastMsgDate | date: 'shortDate'}}
+            <ion-col size="9">
+              <ion-label *ngIf="lastMsgDate"  style="font-weight: 600">
+                {{chat.conversation_name }}
+              </ion-label>
+            </ion-col>
+            <ion-col style="padding-left: 0; padding-right: 0">
+              <ion-label class="small">
+                {{ lastMsgDate | date: 'shortDate'}}
               </ion-label>
             </ion-col>
           </ion-row>
           <ion-row >
-            <ion-col size="12" style="padding-right: 5px">
+            <ion-col size="12">
               <ion-label *ngIf="chat.last_message">
-                  <ion-text >
+                  <ion-text class="small">
                     {{chat.last_message?.message_body}}
                   </ion-text>
               </ion-label>
             </ion-col>
           </ion-row>
         </ion-grid>
+        </ion-item>
       </ion-col>
     </ion-row>
   </ion-grid>
-</ion-item>
+
