--- a/src/app/pages/chat/forward-chat/forward-chat.page.html
+++ b/src/app/pages/chat/forward-chat/forward-chat.page.html
@@ -47,7 +47,7 @@
 </ion-content>
 <ion-footer *ngIf="selectedUsers.length > 0">
   <ion-fab vertical="center" horizontal="end" slot="fixed">
-    <ion-fab-button (click)="createGroup()">
+    <ion-fab-button (click)="forwardMsg()">
       <ion-icon name="checkmark"></ion-icon>
     </ion-fab-button>
   </ion-fab>
