--- a/src/app/pages/chat/forward-chat/forward-chat.page.html
+++ b/src/app/pages/chat/forward-chat/forward-chat.page.html
@@ -40,15 +40,13 @@
     </div>
   </div>
 
-
+  <ion-fab vertical="center" horizontal="end" slot="fixed" *ngIf="selectedUsers.length > 0">
+    <ion-fab-button >
+      <ion-icon name="checkmark"></ion-icon>
+    </ion-fab-button>
+  </ion-fab>
 
   <ion-text *ngIf="userArray?.users?.length<=0 && alreadySearched && userArray?.notUsers?.length<=0 && filterUsers?.users?.length<=0 && userArray?.notUsers?.length<=0" id="noResults">No match found!</ion-text>
 
 </ion-content>
-<ion-footer *ngIf="selectedUsers.length > 0">
-  <ion-fab vertical="center" horizontal="end" slot="fixed">
-    <ion-fab-button (click)="createGroup()">
-      <ion-icon name="checkmark"></ion-icon>
-    </ion-fab-button>
-  </ion-fab>
-</ion-footer>
+
