--- a/src/app/pages/details/details.page.html
+++ b/src/app/pages/details/details.page.html
@@ -3,6 +3,11 @@
     <ion-buttons slot="start">
       <ion-back-button defaultHref="/home"></ion-back-button>
     </ion-buttons>
+    <ion-buttons slot="end">
+      <ion-button>
+        <ion-icon slot="icon-only" name="create"></ion-icon>
+      </ion-button>
+    </ion-buttons>
     <ion-title>{{chat?.chat.conversation_name}}</ion-title>
   </ion-toolbar>
 </ion-header >
@@ -14,6 +19,15 @@
   <div *ngIf="chat.chat.type_conversation_id !== 1">
     <ion-item lines="none">
       <ion-text style="color: #3880ff">{{chat.participants.length}} participants</ion-text>
+    </ion-item>
+    <div *ngFor="let user of chat.participants">
+      <app-detail-user   [user]="user"></app-detail-user>
+    </div>
+
+  </div>
+  <div *ngIf="chat.chat.type_conversation_id === 1">
+    <ion-item lines="none">
+      <ion-text style="color: #3880ff">Participants</ion-text>
     </ion-item>
     <div *ngFor="let user of chat.participants">
       <app-detail-user   [user]="user"></app-detail-user>
