--- a/src/app/pages/details-modal/details-modal.page.html
+++ b/src/app/pages/details-modal/details-modal.page.html
@@ -1,6 +1,6 @@
 <ion-header>
   <ion-toolbar>
-    <ion-title>details-modal</ion-title>
+    <ion-title>Update your group's name...</ion-title>
   </ion-toolbar>
 </ion-header>
 
