--- a/src/app/pages/details-modal/details-modal.page.html
+++ b/src/app/pages/details-modal/details-modal.page.html
@@ -1,11 +1,21 @@
 <ion-header>
   <ion-toolbar>
-    <ion-title>Update your group's name...</ion-title>
+      <ion-buttons slot="start">
+          <ion-button (click)="modalCancel()">
+              <ion-icon size="large" name="arrow-back"></ion-icon>
+          </ion-button>
+      </ion-buttons>
+      <ion-buttons slot="end">
+          <ion-button [disabled]="title.trim().length<0">
+              <ion-icon slot="icon-only" name="checkmark-circle-outline"></ion-icon>
+          </ion-button>
+      </ion-buttons>
+    <ion-title>Update groupName</ion-title>
   </ion-toolbar>
 </ion-header>
 
 <ion-content>
-	<ion-item>
+	<ion-item style="margin-top: 5%">
 		<ion-input minlength='5' maxlength='25' [(ngModel)]='title'></ion-input>
 	</ion-item>
 </ion-content>
