--- a/src/app/components/detail-user/detail-user.component.html
+++ b/src/app/components/detail-user/detail-user.component.html
@@ -1,5 +1,5 @@
 <ion-item *ngIf="user">
-  <ion-grid >
+  <ion-grid (press)="onPressed()">
     <ion-row>
       <ion-col  size="3" >
         <ion-avatar >
