finished add participant and leave group

--- a/src/app/pages/add-user/add-user.page.html
+++ b/src/app/pages/add-user/add-user.page.html
@@ -41,7 +41,7 @@
   </div>
 
   <ion-fab vertical="center" horizontal="end" slot="fixed" *ngIf="selectedUsers?.length > 0">
-    <ion-fab-button (click)="console.log('aqui va lo de enviar los nuevos users')">
+    <ion-fab-button (click)="addNewMember()">
       <ion-icon name="checkmark"></ion-icon>
     </ion-fab-button>
   </ion-fab>
