--- a/src/app/pages/chat/forward-chat/forward-chat.page.html
+++ b/src/app/pages/chat/forward-chat/forward-chat.page.html
@@ -10,7 +10,7 @@
             <ion-searchbar [(ngModel)]="inputValue"
                            (ionChange)="searchHandler()"
                            type="search"
-                           placeholder="Find an user">
+                           placeholder="Find a chat">
             </ion-searchbar>
           </ion-col>
         </ion-row>
