--- a/src/app/components/popover/popover.component.html
+++ b/src/app/components/popover/popover.component.html
@@ -12,7 +12,7 @@
     <ion-item *ngIf="isGroup" button detail="true" (click)="onLeaveGroup()">
     Leave Group
   </ion-item>
-    <ion-item *ngIf="isGroup && isGroupAdmin" button detail="true" (click)="onDeleteGroup()">
-    Delete Group
-  </ion-item>
+    <!--<ion-item *ngIf="isGroup && isGroupAdmin" button detail="true" (click)="onDeleteGroup()">-->
+    <!--Delete Group-->
+  <!--</ion-item>-->
 </ion-list>
